# sshpass-rs

./: Cargo.toml  LICENSE  README.md
.sisyphus/evidence/: base-commit.txt  task-5-signal-bytes.txt  task-5-signals.txt  task-6-argument-source.txt  task-9-file-backend.txt  task-9-keychain-crud.txt
.sisyphus/notepads/1password-backend/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/notepads/sshpass-rs/: learnings.md  problems.md
.sisyphus/plans/: 1password-backend.md  verbose-everywhere.md
src/: cli.rs  error.rs  keychain.rs  main.rs  matcher.rs  onepassword.rs  password.rs  pty.rs  signals.rs
tests/: integration.rs  onepassword_integration.rs  pty_integration.rs
tests/fixtures/: mock_op.sh  mock_ssh.sh
