[package]
name = "sshpassx"
version = "0.2.0"
edition = "2021"
authors = ["cydia2001 <cydia2001@duck.com>"]
description = "A secure, drop-in Rust replacement for sshpass with macOS Keychain and 1Password integration"
license = "MIT"
repository = "https://github.com/anyin233/sshpass-rs"
homepage = "https://github.com/anyin233/sshpass-rs"
readme = "README.md"
keywords = ["ssh", "sshpass", "password", "keychain", "1password"]
categories = ["command-line-utilities", "authentication"]
exclude = ["tests/", ".sisyphus/", "src/bin/fake_ssh.rs"]

[[bin]]
name = "sshpassx"
path = "src/main.rs"

[[bin]]
name = "fake_ssh"
path = "src/bin/fake_ssh.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
keyring = { version = "3", features = ["apple-native"] }
portable-pty = "0.9"
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1", features = ["derive"] }
rpassword = "7"
signal-hook = "0.3"
nix = { version = "0.29", features = ["signal", "term", "ioctl"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
